[Qt] Fix issues remaining with fixed positioned layers https://bugs.webkit.org/show_bug.cgi?id=92528

Reviewed by Noam Rosenthal.

Source/WebCore:

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::syncCompositingStateSelf):
Make sure that the delta is used when syncCompositingStateSelf is called afterward.
(WebCore::TextureMapperLayer::setScrollPositionDeltaIfNeeded):
* platform/graphics/texmap/TextureMapperLayer.h:
Use a FloatSize instead of an IntPoint for the delta.
(TextureMapperLayer):
(WebCore::TextureMapperLayer::adjustedPosition):

Source/WebKit2:

This partially fixes jittering of fixed layers when zoomed in and the
blurriness of rendered tiles of the non-composited contents layer.

* UIProcess/WebLayerTreeRenderer.cpp:
(WebKit::boundedScrollPosition):
(WebKit::WebLayerTreeRenderer::paintToCurrentGLContext):
Remove the adjustment on the root layer. This cancels setPixelAligned and causes the blurriness.
(WebKit::WebLayerTreeRenderer::adjustPositionForFixedLayers):
Use m_accurateVisibleContentsPosition to calculate the delta.
(WebKit::WebLayerTreeRenderer::didChangeScrollPosition):

Canonical link: https://commits.webkit.org/110446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124012 268f45cc-cd09-0410-ab3c-d52691b4dbfc